@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-26T01:39:36Z",
+  "timestamp" : "2022-10-26T08:20:58Z",
   "count_outdated" : 598,
   "uniques_outdated" : 342,
   "count" : 645,
-  "uniques" : 368,
+  "uniques" : 369,
   "clones" : [
     {
       "timestamp": "2022-10-12T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-10-25T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
